--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1>This is a cool heading</h1>
+    </header>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
