Html issues with fontawesome

--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/4db4cafde8.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Group Project</title>
 
-    <!-- Style -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>This is a cool heading</h1>
+      <div></div>
+      <div><img src="assets/drip logo.png" alt="Drip Logo" /></div>
+      <div></div>
     </header>
-    <!-- Script -->
+    <main>
+      <p>came through drippin'</p>
+      <div class="dripsContainer Fancy">
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </div>
+      <div class="dripsContainer Hot">
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </div>
+      <div class="dripsContainer Cold">
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </div>
+    </main>
+    <footer></footer>
     <script src="script.js"></script>
   </body>
 </html>
