Finished item/menu details. Will start to use Javascript to push out items dynamically.

--- a/index.html
+++ b/index.html
@@ -5,36 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
-      src="https://kit.fontawesome.com/4db4cafde8.js"
+      src="https://kit.fontawesome.com/74673bae8b.js"
       crossorigin="anonymous"
     ></script>
-    <title>Group Project</title>
+    <title>Drip Coffee</title>
+    <link rel="icon" type="image/x-icon" href="/assets/logos/drip logo.png" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div></div>
-      <div><img src="assets/drip logo.png" alt="Drip Logo" /></div>
+      <div><i class="fa-solid fa-bars"></i></div>
+      <h1><img src="assets/logos/drip logo.png" alt="Drip Logo" /></h1>
       <div></div>
     </header>
     <main>
-      <p>came through drippin'</p>
-      <div class="dripsContainer Fancy">
-        <img src="" alt="" />
-        <img src="" alt="" />
-      </div>
-      <div class="dripsContainer Hot">
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-      </div>
+      <h2>came through drippin'</h2>
+      <section>
+        <h3>fancy drips</h3>
+        <ul class="dripsContainer Fancy">
+          <li>
+            <img
+              src="./assets/Coffee-images/macchiato.jpeg"
+              alt="Macchiato drink"
+            />
+            <h4>driptastic macchiato</h4>
+            <p>A rich espresso dressed in foam.</p>
+            <p>$2.99</p>
+          </li>
+          <li>
+            <img src="./assets/Coffee-images/frappe.jpeg" alt="Frappe drink" />
+            <h4>drippy pour-over</h4>
+            <p>Espresso and coffee mixed to perfection on ice.</p>
+            <p>$4.99</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>hot drips</h3>
+        <ul class="dripsContainer Hot">
+          <li>
+            <img
+              src="./assets/Coffee-images/hot-brew.jpeg"
+              alt="House brew drink"
+            />
+          </li>
+          <li>
+            <img
+              src="./assets/Coffee-images/espresso.jpeg"
+              alt="Espresso drink"
+            />
+          </li>
+          <li>
+            <img
+              src="./assets/Coffee-images/cappuccino.jpeg"
+              alt="Cappuccino drink"
+            />
+          </li>
+          <li>
+            <img
+              src="./assets/Coffee-images/latte.jpeg"
+              alt="Caffe latte drink"
+            />
+          </li>
+        </ul>
+      </section>
       <div class="dripsContainer Cold">
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
+        <img
+          src="./assets/Coffee-images/cold-brew.jpeg"
+          alt="Cold Brew drink"
+        />
+        <img
+          src="./assets/Coffee-images/iced-americano.jpeg"
+          alt="Iced Americano drink"
+        />
+        <img
+          src="./assets/Coffee-images/iced-mocha.jpeg"
+          alt="Iced Mocha drink"
+        />
+        <img
+          src="./assets/Coffee-images/iced-chai-tea-latte.jpeg"
+          alt="Iced Chai Tea Latte drink"
+        />
       </div>
     </main>
     <footer></footer>
