--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </head>
   <body>
     <header>
-      <div><i class="fa-solid fa-bars"></i></div>
+      <div><i class="fa-solid fa-bars" alt="Settings Bar"></i></div>
       <h1><img src="assets/logos/drip logo.png" alt="Drip Logo" /></h1>
-      <div></div>
+      <div><i class="fa-solid fa-cart-shopping" alt="Checkout Cart"></i></div>
     </header>
     <main>
-      <h2>came through drippin'</h2>
+      <h2 class="slogan">came through drippin'</h2>
       <section>
         <h3>fancy drips</h3>
         <ul class="dripsContainer Fancy">
