--- a/index.html
+++ b/index.html
@@ -4,20 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/74673bae8b.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Actor&family=Calistoga&family=Roboto:wght@100;300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Drip Coffee</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logos/drip logo.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/logos/drip logo black word.png"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div><i class="fa-solid fa-bars" alt="Settings Bar"></i></div>
+      <a
+        ><img
+          src="assets/icons/side-bar-icon.svg"
+          alt="Settings Bar"
+          class="header-icon"
+      /></a>
       <h1><img src="assets/logos/drip logo.png" alt="Drip Logo" /></h1>
-      <div><i class="fa-solid fa-cart-shopping" alt="Checkout Cart"></i></div>
+      <a
+        ><img
+          src="assets/icons/shoppingcart-icon.svg"
+          alt="Shopping Cart"
+          class="header-icon"
+      /></a>
     </header>
     <main>
       <h2 class="slogan">came through drippin'</h2>
