Finished the layout and design for the items, We will now try to implement it using JavaScript to make it more dynamic if admin added more items.

--- a/index.html
+++ b/index.html
@@ -37,29 +37,41 @@
     </header>
     <main>
       <h2 class="slogan">came through drippin'</h2>
-      <section>
+      <!-- Fancy begins here -->
+      <section class="fancy-container">
         <h3>fancy drips</h3>
-        <ul class="dripsContainer Fancy">
-          <li>
-            <img
-              src="./assets/Coffee-images/macchiato.jpeg"
-              alt="Macchiato drink"
-            />
+        <ul class="drips-container">
+          <li class="item-container">
+            <div class="img-container">
+              <img
+                src="./assets/Coffee-images/macchiato.jpeg"
+                alt="Macchiato drink"
+              />
+            </div>
             <h4>driptastic macchiato</h4>
-            <p>A rich espresso dressed in foam.</p>
-            <p>$2.99</p>
+            <p class="descrip-text">A rich espresso dressed in foam.</p>
+            <p class="price-text">$2.99</p>
           </li>
-          <li>
-            <img src="./assets/Coffee-images/frappe.jpeg" alt="Frappe drink" />
+          <li class="item-container">
+            <div class="img-container">
+              <img
+                src="./assets/Coffee-images/frappe.jpeg"
+                alt="Frappe drink"
+              />
+            </div>
             <h4>drippy pour-over</h4>
-            <p>Espresso and coffee mixed to perfection on ice.</p>
-            <p>$4.99</p>
+            <p class="descrip-text">
+              Espresso and coffee mixed to perfection on ice.
+            </p>
+            <p class="price-text">$4.99</p>
           </li>
         </ul>
       </section>
+      <!-- Fancy ends here -->
+      <!-- Hot begins here -->
       <section>
         <h3>hot drips</h3>
-        <ul class="dripsContainer Hot">
+        <ul class="hot">
           <li>
             <img
               src="./assets/Coffee-images/hot-brew.jpeg"
@@ -86,7 +98,9 @@
           </li>
         </ul>
       </section>
-      <div class="dripsContainer Cold">
+      <!-- Hot ends here -->
+      <!-- Cold begins here -->
+      <div class="cold">
         <img
           src="./assets/Coffee-images/cold-brew.jpeg"
           alt="Cold Brew drink"
@@ -104,6 +118,7 @@
           alt="Iced Chai Tea Latte drink"
         />
       </div>
+      <!-- Cold ends here -->
     </main>
     <footer></footer>
     <script src="script.js"></script>
