javascript for each loop, made layout dynamic

--- a/index.html
+++ b/index.html
@@ -40,32 +40,7 @@
       <!-- Fancy begins here -->
       <section class="fancy-container">
         <h3>fancy drips</h3>
-        <ul class="drips-container">
-          <li class="item-container">
-            <div class="img-container">
-              <img
-                src="./assets/Coffee-images/macchiato.jpeg"
-                alt="Macchiato drink"
-              />
-            </div>
-            <h4>driptastic macchiato</h4>
-            <p class="descrip-text">A rich espresso dressed in foam.</p>
-            <p class="price-text">$2.99</p>
-          </li>
-          <li class="item-container">
-            <div class="img-container">
-              <img
-                src="./assets/Coffee-images/frappe.jpeg"
-                alt="Frappe drink"
-              />
-            </div>
-            <h4>drippy pour-over</h4>
-            <p class="descrip-text">
-              Espresso and coffee mixed to perfection on ice.
-            </p>
-            <p class="price-text">$4.99</p>
-          </li>
-        </ul>
+        <ul class="drips-container"></ul>
       </section>
       <!-- Fancy ends here -->
       <!-- Hot begins here -->
