Tweaked some of the code and removed some of the comment

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Hot ends here -->
       <!-- Cold begins here -->
       <section class="cold-drinks-container category-drink">
-        <h3>Cold Drinks</h3>
+        <h3>cold drips</h3>
         <ul class="cold-drinks-list drinks-container">
           <!-- <img
           src="./assets/Coffee-images/cold-brew.jpeg"
