Whoops, it's okay

--- a/index.html
+++ b/index.html
@@ -98,7 +98,19 @@
       </section>
       <!-- Cold ends here -->
     </main>
-    <footer></footer>
+    <footer>
+      <a
+        ><img
+          src="assets/logos/drip logo footer shadow.png"
+          alt="Drip Logo"
+          class="footer-logo"
+      /></a>
+      <p>© 2022 Drip Coffee, LLC</p>
+      <div class="icon-container">
+        <a><img src="assets/icons/facebook.icon.svg" alt="Facebook Icon" /></a>
+        <a><img src="assets/icons/insta.icon.svg" alt="Instagram Icon" /></a>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
