fixed buttons, working on shopping cart array. Issue with counter.

--- a/index.html
+++ b/index.html
@@ -46,55 +46,13 @@
       <!-- Hot begins here -->
       <section class="hot-drinks-container category-drink">
         <h3>hot drips</h3>
-        <ul class="hot-drinks-list drinks-container">
-          <!-- <li>
-            <img
-              src="./assets/Coffee-images/hot-brew.jpeg"
-              alt="House brew drink"
-            />
-          </li>
-          <li>
-            <img
-              src="./assets/Coffee-images/espresso.jpeg"
-              alt="Espresso drink"
-            />
-          </li>
-          <li>
-            <img
-              src="./assets/Coffee-images/cappuccino.jpeg"
-              alt="Cappuccino drink"
-            />
-          </li>
-          <li>
-            <img
-              src="./assets/Coffee-images/latte.jpeg"
-              alt="Caffe latte drink"
-            />
-          </li> -->
-        </ul>
+        <ul class="hot-drinks-list drinks-container"></ul>
       </section>
       <!-- Hot ends here -->
       <!-- Cold begins here -->
       <section class="cold-drinks-container category-drink">
         <h3>cold drips</h3>
-        <ul class="cold-drinks-list drinks-container">
-          <!-- <img
-          src="./assets/Coffee-images/cold-brew.jpeg"
-          alt="Cold Brew drink"
-        />
-        <img
-          src="./assets/Coffee-images/iced-americano.jpeg"
-          alt="Iced Americano drink"
-        />
-        <img
-          src="./assets/Coffee-images/iced-mocha.jpeg"
-          alt="Iced Mocha drink"
-        />
-        <img
-          src="./assets/Coffee-images/iced-chai-tea-latte.jpeg"
-          alt="Iced Chai Tea Latte drink"
-        /> -->
-        </ul>
+        <ul class="cold-drinks-list drinks-container"></ul>
       </section>
       <!-- Cold ends here -->
     </main>
