--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
           src="assets/icons/side-bar-icon.svg"
           alt="Settings Bar"
           class="header-icon"
-      /></a>
+        />
+      </a>
       <h1><img src="assets/logos/drip logo.png" alt="Drip Logo" /></h1>
-      <a
+      <a class="shopping-cart-icon"
         ><img
           src="assets/icons/shoppingcart-icon.svg"
           alt="Shopping Cart"
           class="header-icon"
-      /></a>
+        />
+        <div class="cart-amount"><p>0</p></div>
+      </a>
     </header>
     <main>
       <h2 class="slogan">came through drippin'</h2>
@@ -55,6 +58,30 @@
         <ul class="cold-drinks-list drinks-container"></ul>
       </section>
       <!-- Cold ends here -->
+      <section class="view-cart">
+        <div class="cart-header-screen">
+          <h2>Your Cart</h2>
+          <p>X</p>
+        </div>
+        <ul class="cart-items-container"></ul>
+        <h3>Pickup Order</h3>
+        <div class="cart-cost">
+          <div>
+            <p>Subtotal:</p>
+            <p>$00.00</p>
+          </div>
+          <div>
+            <p>Tax:</p>
+            <p>$00.00</p>
+          </div>
+          <div>
+            <p>Total:</p>
+            <p>$00.00</p>
+          </div>
+        </div>
+        <a href="#"><p>Pay with card</p></a>
+        <a href="#"><p>Pay with cash</p></a>
+      </section>
     </main>
     <footer>
       <a
