Added sliding effects and fixed closing and opening shopping cart

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           src="assets/icons/shoppingcart-icon.svg"
           alt="Shopping Cart"
           class="header-icon"
+          id="shopping-cart-icon"
         />
         <div class="cart-amount"><p>0</p></div>
       </a>
@@ -65,9 +66,9 @@
       <section class="view-cart">
         <div class="cart-header-screen">
           <h2>Your Cart</h2>
-          <p>
-            <i class="fa-solid fa-xmark"></i>
-          </p>
+          <a href="#" class="close-button">
+            <i class="fa-solid fa-xmark" id="close-btn"></i>
+          </a>
         </div>
         <ul class="cart-items-container"></ul>
         <div class="pick-up-order-container">
