fixed some accessability issues

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </head>
   <body>
     <header>
-      <a href="#NA"
-        ><img
+      <a class='hamburger-icon'>
+        <img
           src="assets/icons/side-bar-icon.svg"
           alt="Settings Bar"
           class="header-icon side-bar-icon"
         />
-      </a>
+      </button>
       <div class="header-items-container">
         <h1><img src="assets/logos/drip logo.png" alt="Drip Logo" /></h1>
         <nav class="nav-bar">
@@ -41,7 +41,7 @@
         </nav>
       </div>
 
-      <a class="shopping-cart-icon"
+      <a class="shopping-cart-icon" href="#shopping-icon"
         ><img
           src="assets/icons/shoppingcart-icon.svg"
           alt="Shopping Cart"
@@ -89,7 +89,7 @@
       <section class="view-cart">
         <div class="cart-header-screen">
           <h2>Your Cart</h2>
-          <button href="#" class="close-button">
+          <button class="close-button">
             close
             <i
               alt="close payment screen"
@@ -241,7 +241,7 @@
       </section>
     </main>
     <footer>
-      <a
+      <a href="#logo"
         ><img
           src="assets/logos/drip logo footer shadow.png"
           alt="Drip Logo"
@@ -249,8 +249,12 @@
       /></a>
       <p>© 2022 Drip Coffee, LLC</p>
       <div class="icon-container">
-        <a><img src="assets/icons/facebook.icon.svg" alt="Facebook Icon" /></a>
-        <a><img src="assets/icons/insta.icon.svg" alt="Instagram Icon" /></a>
+        <a href="#facebook"
+          ><img src="assets/icons/facebook.icon.svg" alt="Facebook Icon"
+        /></a>
+        <a href="#intagram"
+          ><img src="assets/icons/insta.icon.svg" alt="Instagram Icon"
+        /></a>
       </div>
     </footer>
     <script src="script.js"></script>
