--- a/index.html
+++ b/index.html
@@ -61,12 +61,6 @@
       </aside>
       <div class="slogan">
         <h2>coffee done right.</h2>
-        <p>
-          Our coffee is made with the pride and happiness from our brewiers. The
-          ingridents are made from all natural coffee beans that are grown here
-          in America. Our main goal is to make the best coffee for our
-          customers.
-        </p>
       </div>
       <!-- Fancy begins here -->
       <section class="fancy-container category-drink" id="fancy-section">
@@ -179,7 +173,7 @@
           </div>
           <div class="receipt-display-container display-options-off">
             <div class="logo-and-reciept-id">
-              <img src="./assets/logos/drip logo.png" alt="Drip logo" />
+              <img src="./assets/logos/receipt logo.png" alt="Drip logo" />
               <div class="reciept-id">
                 <div class="reciept-number-container">
                   <p>Receipt Number:</p>
