finished some tranisitions on the buttons in checkout

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </form>
             <p class="or-option-card">or</p>
             <div class="apple-google-btns">
-              <button class="apple-pay">Apple Pay</button>
-              <button class="google-pay">Google Pay</button>
+              <button class="apple-pay"><i class="fa-brands fa-apple-pay"></i></button>
+              <button class="google-pay"><i class="fa-brands fa-google-pay"></i></button>
             </div>
           </div>
           <div class="pay-with-cash-container display-options-off">
