Finished all logic and made new design features

--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
                 name="card-holder-name"
                 id="card-holder-name"
               />
-              <label for="card-number">Card Number</label>
+              <label class='card-number' for="card-number">Card Number</label>
               <input type="number" name="card-number" id="card-number" />
               <div class="card-exp-cvv">
                 <div>
-                  <label for="card-expiration-date">Card Exp.</label>
+                  <label class='card-exp' for="card-expiration-date">Card Exp.</label>
                   <input
-                    type="date"
+                    type="month"
                     name="card-expiration-date"
                     id="card-expiration-date"
                   />
                 </div>
                 <div>
-                  <label for="cvv">CVV</label>
+                  <label class='card-cvv' for="cvv">CVV</label>
                   <input type="number" name="cvv" id="cvv" />
                 </div>
               </div>
