Updated the font awesome with a new key.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Actor&family=Calistoga&family=Roboto:wght@100;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/74673bae8b.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/c25ed6bb39.js" crossorigin="anonymous"></script>
     <title>Drip Coffee</title>
     <link
       rel="icon"
